# Tradeforge

./: .gitignore  BACKTESTING_ENGINE_V2_PLAN.md  BACKTEST_ENGINE_COMPARISON.md  BACKTEST_ENGINE_V3_PLAN.md  DOCUMENTATION_SUMMARY.txt  ENGINE_REBUILD_PLAN.md  FINAL_BACKTEST_RESULTS.txt  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  MASTER_AUDIT_REPORT.md  OPTIMIZATION_ANALYSIS.txt  REVIEW_CONTINUE.md  REVIEW_REPORT.md  TradeForge Plan  UI_REDESIGN_PLAN.md  Volume Divergence Reversal Signals.txt  audit_detail.txt  audit_detail2.txt  audit_output.txt  backtest_results_phase1.json  backtest_results_v2.json  build_rust_core.py  commit_msg.txt  final_backtest_results.csv  render.yaml  run_build.bat  start.bat  start_frontend.bat  strategies.txt  test_api.ps1  test_api.py  test_api2.ps1  test_api3.ps1  test_audit_api.py  test_audit_live.py  test_audit_live2.py  test_backtest.py  test_health.ps1  test_llm_api.py  test_phase1b.py  (+9 more)
.claude/: launch.json
backend/: .env.example  _cleanup_strategies.py  _migrate_datasource.py  _migrate_optimization.py  create_strategies.py  main.py  mt5_bridge_server.py  requirements.txt  reset_pw.py  run_backtests.py  run_walk_forward.py  run_walk_forward_v2.py  start_server.py  test_agent_start.py  test_import.py  test_phase1a.py  test_phase1c.py  test_phase1d.py  test_phase1e.py  test_phase2.py  (+4 more)
backend/app/services/backtest/v2/core/: Cargo.toml  __init__.py  fallback.py  pyproject.toml  python_bindings.py
backend/app/services/backtest/v2/core/src/: event_queue.rs  indicators.rs  lib.rs  portfolio.rs  runner.rs  tick_matcher.rs  types.rs
(+359 files in other folders)
