[package]
name = "tradeforge_core"
version = "0.1.0"
edition = "2021"
description = "Rust hot-path engine for FlowrexAlgo backtesting (PyO3 bindings)"

[lib]
name = "tradeforge_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
