[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tradeforge_core"
version = "0.1.0"
description = "Rust hot-path engine for FlowrexAlgo backtesting"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tradeforge_core"
